--- a/oasis_dashboard/oasisdash/static/oasisdash/oasis/function/edit/edit.html
+++ b/oasis_dashboard/oasisdash/static/oasisdash/oasis/function/edit/edit.html
@@ -1,18 +1,38 @@
 <div class="container">
-    <div class="col-xs-12">
-        <tabset>
-            <tab>
-                <tab-heading>
-                    <a ui-sref="edit.code">Code</a>
-                </tab-heading>
-            </tab>
-            <tab>
-                <tab-heading>
-                    <a ui-sref="edit.monitor">Monitor</a>
-                </tab-heading>
-            </tab>
-        </tabset>
+
+    <div ng-if="functionId != -1">
+        <div class="col-xs-12">
+            <tabset>
+                <tab>
+                    <tab-heading>
+                        <a ui-sref="edit.code">Code</a>
+                    </tab-heading>
+                </tab>
+
+                <tab>
+                    <tab-heading>
+                        <a ui-sref="edit.monitor">Monitor</a>
+                    </tab-heading>
+                </tab>
+
+            </tabset>
+        </div>
     </div>
+
+    <div ng-if="functionId == -1">
+        <div class="col-xs-12">
+            <tabset>
+                <tab>
+                    <tab-heading>
+                        <a ui-sref="edit.code">Code</a>
+                    </tab-heading>
+                </tab>
+
+            </tabset>
+        </div>
+    </div>
+
+
     <div ui-view>
         <!--Here is the content-->
     </div>
